# acidcamGL

./: CMakeLists.txt  LICENSE  README.md  build_dmg.sh  dmg_build_file.sh  stereo_cam
autofilter/: default.af  echo_glitch.af  echo_shift.af  glitch.af  glitch_fast.af  glitch_off.af  mirror_auto.af
custom/: CustomEdgeGlitch  CustomMirrorBlend  CustomReverseXorBlur  CustomSquareStrobe  CustomVarScale  index.txt
deb/acidcamGL/DEBIAN/: control
dmg_build.sh/: build_dmg.sh
filters/: 4ac_rand.glsl  4rand.glsl  8bit.glsl  8huri.glsl  README.md  acid_color2.glsl  acidcam.glsl  acidcolor.glsl  acidcolorrand.glsl  addup_blend.glsl  addup_cos.glsl  af_scale.glsl  af_scale2.glsl  air.glsl  air_full.glsl  alpha_diamond.glsl  alpha_fade_blend.glsl  alpha_sin_os.glsl  analog.glsl  apart.glsl  atan-bowl.glsl  average_pixels.glsl  balloon.glsl  bend.glsl  bend2.glsl  bend_rev.glsl  bi_cycle.glsl  bit_rainbow.glsl  blackhole.glsl  block_pixels.glsl  blue.glsl  blue_strobe.glsl  blur_offset.glsl  blur_offset_color_fade.glsl  blurry.glsl  breathe.glsl  bright.glsl  bright_rainbow.glsl  brighten.glsl  brighten_rev.glsl  (+789 more)
launcher/: launcher.pro  main.cpp  main_window.cpp  main_window.hpp  moc_main_window.cpp  moc_sock_server.cpp  sock_server.cpp  sock_server.hpp  test.cpp
launcher.gui/: CMakeLists.txt  README.md  auto_window.cpp  auto_window.hpp  launcher.pro  main.cpp  main_window.cpp  main_window.hpp  moc_main_window.cpp  options_window.cpp  options_window.hpp  sock_server.cpp  sock_server.hpp
launcher.gui/launcher.app/Contents/: Info.plist
launcher.gui/launcher.app/Contents/Resources/: launcher.icns
launcher/acidcamGL.app/Contents/: Info.plist
midi-cfg/: Makefile  main.cpp  midi.midi_cfg  midi_cfg.cpp  midi_cfg.hpp
midi-cfg/Config.Tool/: ConfigTool.pro  QtMidiApp.pro  cap.cpp  cap.h  main.cpp  mainwindow.cpp  mainwindow.h  midi_cfg.hpp
midi-cfg/glfw3/: gen-test  prog.cpp
playlist/: Blend.key  Blur.key  Collection.key  Fast.key  Glitch.key  GlitchFast.key  InfiniteFast.key  Median.key  Rectangle.key  Strobe.key  Trails.key  UltraFast.key  Variable.key  VeryFast.key  playlist-example.txt
plugin/: README.md  addmulxor.acidcam  addxor.acidcam  blendstuck.acidcam  detect_edges.acidcam  index.txt  lsdadd.acidcam  lsdinc.acidcam  lsdinout.acidcam  lsdtwo.acidcam  newbars.acidcam  newblendlines.acidcam  newlines.acidcam  newone1.acidcam  newrandblend.acidcam  newstretchlines.acidcam  newvarblendlines.acidcam  newvarlines.acidcam  offstuck.acidcam  plug1.acidcam
scripts/: build_project.sh  install_brew.sh  install_macos.sh  install_pre_ubuntu.sh  install_ubuntu.sh  sort_images.pl
shortcut/: k.key  square-key-example.key
source/: Makefile.linux  Makefile.macos  Makefile.midi  Makefile.midi.linux  acidcamGL.cpp  acidcamGL.midi  acidcam_window.cpp  acidcam_window.hpp  autofilter.hpp  cube.hpp  ffmpeg_write.cpp  ffmpeg_write.h  fragment-shader.glsl  gl_shader.cpp  gl_shader.hpp  gl_window.cpp  gl_window.hpp  ipc_client.cpp  ipc_client.hpp  keymap.cpp  keymap.hpp  main.cpp  midi.hpp  midi_cfg.hpp  plugin-program.cpp  plugin-program.hpp  stereo.cpp  stereo.h  syphon.h  syphon.mm  vertex-shader.glsl  x11-screen.hpp
source/acidcamGL-Visual.Studio/: acidcamGL.sln  acidcamGL.vcxproj  acidcamGL.vcxproj.filters  ffmpeg_write.cpp  getopt.cpp  getopt.h  gl_shader.cpp  gl_shader.hpp  gl_window.cpp  gl_window.hpp  ipc_client.cpp  ipc_client.hpp  keymap.cpp  main.cpp
source/acidcamGL-Visual.Studio/filters/: bright.glsl  cos.glsl  cos_sin.glsl  dark.glsl  distort_light.glsl  gradient_position.glsl  green_aura.glsl  green_gradient_strobe.glsl  greenblue.glsl  lightfadedark.glsl  optxtime_tex.glsl  purple_haze.glsl  random_colors.glsl  random_square.glsl  random_strobe_time.glsl  rgb.glsl  rgb_time_xor.glsl  rgbchecker.glsl  sin.glsl  vertex.glsl
source/filters/: acidcam.glsl  blue.glsl  blue_strobe.glsl  color_bars.glsl  cos.glsl  cos_sin.glsl  dark_square.glsl  darkred.glsl  flash.glsl  gradient.glsl  gradient_color.glsl  gradient_position.glsl  green.glsl  green_strobe.glsl  greenblend.glsl  greenblue.glsl  index.txt  lightfade.glsl  moving_gradient.glsl  optxtime.glsl  optxtime_cos.glsl  optxtime_tex.glsl  random_strobe.glsl  random_strobe_time.glsl  red.glsl  red_strobe.glsl  rgb.glsl  rgb_control.glsl  rgb_time.glsl  rgb_time_xor.glsl  rgbvar_inc.glsl  scale.glsl  sheet.glsl  sin.glsl  source_strobe.glsl  squares.glsl  strobe_in_out.glsl  tan.glsl  time_xor.glsl  time_xor_scale.glsl  (+5 more)
source/include/glad/: glad.h
source/macos-static/: AcidCamGL_Snapshot-2021.08.13_23.54.06_1280x720x1.tif  Makefile  ac.h  acidcam_window.cpp  acidcam_window.hpp  autofilter.hpp  copy.sh  ffmpeg_write.cpp  ffmpeg_write.h  gl_shader.cpp  gl_shader.hpp  gl_window.cpp  gl_window.hpp  glm  grab.m  ipc_Client.cpp  ipc_client.cpp  ipc_client.hpp  keymap.cpp  keymap.hpp  macos  midi.hpp  midi_cfg.hpp  plugin-program.cpp  plugin-program.hpp  screen.mm  stereo.cpp  stereo.h  syphon.h  syphon.mm
source/macos-static/custom/: index.txt  test1  test2
source/macos-static/libacidcam/: Makefile  ac-filter1.cpp  ac-filter3.cpp  ac-filter35.cpp  ac-filter43.cpp  ac-filter45.cpp  ac-filter46.cpp  ac-filter47.cpp  ac-filtercat.cpp  ac-filtercat.h  ac.h  screen.mm
source/macos-static/plugin/: Makefile
source/macos-static/stereo_cam/: Makefile  main.cpp
source/plugin/: Makefile  README.md
source/plugin/Line_across_side_rev2/: Makefile
source/plugin/addmulxor/: Makefile  addmulxor.cpp
source/plugin/addxor/: Makefile  addxor.cpp
source/plugin/alpha_diamond/: Makefile  alpha.cpp
source/plugin/alpha_diamond2/: Makefile  alpha.cpp
source/plugin/alpha_diamond3/: Makefile  alpha.cpp
source/plugin/alpha_diamond4/: Makefile  alpha.cpp
source/plugin/alpha_diamond5/: Makefile  alpha.cpp
source/plugin/alphablend_expand/: Makefile  expand.cpp
source/plugin/alphablend_five/: Makefile  five.cpp
source/plugin/alphablend_tri/: Makefile
source/plugin/alphatrails/: Makefile  alphatrails.cpp
source/src/: glad.c
tools/camera_info_linux/: Makefile  main.cpp
tools/rtdevices/: Makefile  main.cpp
(+917 files in other folders)
